[workspace]
members = [
    "packages",
    "strategies/wbtc_test/deploy",
    "strategies/wbtc_test/strategist",
    "strategies/wbtc_test/types"
]
resolver = "2"

[workspace.dependencies]
env_logger                           = "0.10.0"
async-trait                          = "0.1.77"
cosmwasm-std                         = { version = "2.1.3" }
cosmrs                               = { version = "0.21.1" }
serde                                = { version = "1.0.207", default-features = false, features = ["derive"] }
dotenv                               = "0.15"
tokio                                = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
alloy                                = { version = "0.9.2", features = ["full"] }
hex                                  = "0.4.3"
serde_json                           = { version = "1.0.140", default-features = false, features = ["alloc"] }
mmvault                              = { git = "https://github.com/neutron-org/slinky-vault", package = "mmvault" }
sp1-sdk                              = { version = "4.2.0", default-features = false }
bincode                              = "1.3.3"
anyhow                               = "1"
toml                                 = "0.8"
log                                  = { version = "0.4.22" }

# valence-protocol
valence-domain-clients               = { git = "https://github.com/timewave-computer/valence-domain-clients.git", branch = "main" }
valence-authorization-utils          = { git = "https://github.com/timewave-computer/valence-protocol", branch = "neutron-vaults" }
valence-processor-utils              = { git = "https://github.com/timewave-computer/valence-protocol", branch = "neutron-vaults" }
valence-library-utils                = { git = "https://github.com/timewave-computer/valence-protocol", branch = "neutron-vaults" }
valence-account-utils                = { git = "https://github.com/timewave-computer/valence-protocol", branch = "neutron-vaults" }
valence-ica-ibc-transfer             = { git = "https://github.com/timewave-computer/valence-protocol", branch = "neutron-vaults" }
valence-mars-lending                 = { git = "https://github.com/timewave-computer/valence-protocol", branch = "neutron-vaults" }
valence-supervaults-lper             = { git = "https://github.com/timewave-computer/valence-protocol", branch = "neutron-vaults" }
valence-supervaults-withdrawer       = { git = "https://github.com/timewave-computer/valence-protocol", branch = "neutron-vaults" }
valence-clearing-queue-supervaults   = { git = "https://github.com/timewave-computer/valence-protocol", branch = "neutron-vaults" }
valence-dynamic-ratio-query-provider = { git = "https://github.com/timewave-computer/valence-protocol", branch = "neutron-vaults" }
valence-splitter-library             = { git = "https://github.com/timewave-computer/valence-protocol", branch = "neutron-vaults" }
valence-forwarder-library            = { git = "https://github.com/timewave-computer/valence-protocol", branch = "neutron-vaults" }
valence-verification-gateway         = { git = "https://github.com/timewave-computer/valence-protocol", branch = "neutron-vaults" }
valence-strategist-utils             = { git = "https://github.com/timewave-computer/valence-protocol", branch = "neutron-vaults" }
valence-maxbtc-issuer                = { git = "https://github.com/timewave-computer/valence-protocol", branch = "neutron-vaults" }
valence-lending-utils                = { git = "https://github.com/timewave-computer/valence-protocol", branch = "neutron-vaults" }
