[workspace]
members = [
  "packages",
  "strategies/lombard_btc/deploy",
  "strategies/lombard_btc/strategist",
  "strategies/lombard_btc/types",
  "strategies/wbtc/deploy",
  "strategies/wbtc/strategist",
  "strategies/wbtc/types",
  "strategies/wbtc_lend/deploy",
  "strategies/wbtc_lend/strategist",
  "strategies/wbtc_lend/types",
  "strategies/usdc/deploy",
  "strategies/usdc/types",
  "strategies/usdc/strategist",
  "strategies/cctp_lend/types",
  "strategies/cctp_lend/deploy",
  "strategies/cctp_lend/strategist",
  "strategies/btc_lst/deploy",
  "strategies/btc_lst/strategist",
  "strategies/btc_lst/types",
  "strategies/maxbtc_mint/deploy",
  "strategies/maxbtc_mint/strategist",
  "strategies/maxbtc_mint/types",
  "strategies/maxbtc_mint_and_supervault/deploy",
  "strategies/maxbtc_mint_and_supervault/strategist",
  "strategies/maxbtc_mint_and_supervault/types",
  "coprocessor-apps/clearing-queue/circuit",
  "coprocessor-apps/clearing-queue/controller",
  "coprocessor-apps/clearing-queue/core",
  "coprocessor-apps/lombard-transfer/circuit",
  "coprocessor-apps/lombard-transfer/controller",
  "coprocessor-apps/eureka-transfer/circuit",
  "coprocessor-apps/eureka-transfer/controller",
]
resolver = "2"

[workspace.dependencies]
rustls                     = { version = "0.23", features = ["aws-lc-rs"] }
env_logger                 = "0.10.0"
async-trait                = "0.1.77"
cosmwasm-std               = { version = "2.1.3" }
cosmrs                     = { version = "0.21.1" }
serde                      = { version = "1.0.207", default-features = false, features = ["derive"] }
dotenv                     = "0.15"
tokio                      = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
alloy                      = { version = "0.9.2", features = ["full"] }
hex                        = "0.4.3"
serde_json                 = { version = "1.0.140", default-features = false, features = ["alloc"] }
mmvault                    = { git = "https://github.com/neutron-org/slinky-vault", package = "mmvault", rev = "3a2537c846731b4752bdbee84eeb562e71273438" }
sp1-sdk                    = { version = "5.0.0", default-features = false }
bincode                    = "1.3.3"
anyhow                     = { version = "1", default-features = false }
toml                       = "0.8"
log                        = { version = "0.4.22" }
multi_log                  = "0.1.2"
opentelemetry_sdk          = "0.30.0"
opentelemetry-otlp         = "0.30.0"
opentelemetry-stdout       = "0.30.0"
opentelemetry-appender-log = "0.30.0"


# valence-protocol
valence-domain-clients               = { git = "https://github.com/timewave-computer/valence-domain-clients.git", rev = "885feb6" }
valence-authorization-utils          = { git = "https://github.com/timewave-computer/valence-protocol", rev = "6bc9ebb" }
valence-processor-utils              = { git = "https://github.com/timewave-computer/valence-protocol", rev = "6bc9ebb" }
valence-library-utils                = { git = "https://github.com/timewave-computer/valence-protocol", rev = "6bc9ebb" }
valence-account-utils                = { git = "https://github.com/timewave-computer/valence-protocol", rev = "6bc9ebb" }
valence-ica-ibc-transfer             = { git = "https://github.com/timewave-computer/valence-protocol", rev = "6bc9ebb" }
valence-mars-lending                 = { git = "https://github.com/timewave-computer/valence-protocol", rev = "6bc9ebb" }
valence-supervaults-lper             = { git = "https://github.com/timewave-computer/valence-protocol", rev = "6bc9ebb" }
valence-supervaults-withdrawer       = { git = "https://github.com/timewave-computer/valence-protocol", rev = "6bc9ebb" }
valence-clearing-queue-supervaults   = { git = "https://github.com/timewave-computer/valence-protocol", rev = "6bc9ebb" }
valence-dynamic-ratio-query-provider = { git = "https://github.com/timewave-computer/valence-protocol", rev = "6bc9ebb" }
valence-splitter-library             = { git = "https://github.com/timewave-computer/valence-protocol", rev = "6bc9ebb" }
valence-forwarder-library            = { git = "https://github.com/timewave-computer/valence-protocol", rev = "6bc9ebb" }
valence-strategist-utils             = { git = "https://github.com/timewave-computer/valence-protocol", rev = "6bc9ebb" }
valence-maxbtc-issuer                = { git = "https://github.com/timewave-computer/valence-protocol", rev = "6bc9ebb" }
valence-lending-utils                = { git = "https://github.com/timewave-computer/valence-protocol", rev = "6bc9ebb" }

# valence-coprocessor
valence-coprocessor-ethereum = { git = "https://github.com/timewave-computer/valence-coprocessor-ethereum", tag = "v1.1.3", default-features = false }
valence-coprocessor          = { git = "https://github.com/timewave-computer/valence-coprocessor.git", tag = "v0.4.5", default-features = false }
valence-coprocessor-wasm     = { git = "https://github.com/timewave-computer/valence-coprocessor.git", tag = "v0.4.5", default-features = false }
