[package]
name    = "deploy"
version = "0.1.0"
edition = "2021"

[dependencies]
types                                = { path = "../types" }
anyhow                               = "1"
toml                                 = "0.8"
serde                                = { workspace = true }
cosmwasm-std                         = { workspace = true }
cosmrs                               = { workspace = true }
dotenv                               = { workspace = true }
tokio                                = { workspace = true }
valence-domain-clients               = { workspace = true }
alloy                                = { workspace = true }
hex                                  = { workspace = true }
valence-authorization-utils          = { workspace = true }
valence-processor-utils              = { workspace = true }
valence-library-utils                = { workspace = true }
valence-account-utils                = { workspace = true }
valence-ica-ibc-transfer             = { workspace = true }
valence-mars-lending                 = { workspace = true }
valence-supervaults-lper             = { workspace = true }
valence-supervaults-withdrawer       = { workspace = true }
valence-splitter-library             = { workspace = true }
valence-forwarder-library            = { workspace = true }
valence-clearing-queue-supervaults   = { workspace = true }
valence-dynamic-ratio-query-provider = { workspace = true }
valence-verification-gateway         = { workspace = true }
valence-maxbtc-issuer                = { workspace = true }
sp1-sdk                              = { version = "4.2.0", default-features = false }
bincode                              = "1.3.3"
