[package]
name        = "clearing-queue-circuit"
version     = "0.1.0"
edition     = "2024"
description = "The Valence co-processor circuit definition."

[dependencies]
valence-coprocessor                = { workspace = true }
cosmwasm-std                       = { workspace = true }
valence-authorization-utils        = { workspace = true }
valence-library-utils              = { workspace = true }
valence-clearing-queue-supervaults = { workspace = true }
serde_json                         = { workspace = true }
alloy-primitives                   = { version = "0.8.25", default-features = false }
