[package]
name        = "clearing-queue-controller"
version     = "0.1.0"
edition     = "2024"
description = "The Valence co-processor controller definition."

[dependencies]
serde_json                   = { workspace = true }
valence-coprocessor          = { workspace = true }
valence-coprocessor-wasm     = { workspace = true }
valence-coprocessor-ethereum = { workspace = true, features = ["controller"] }
bincode                      = { version = "2.0.1", default-features = false, features = ["alloc", "serde"] }
alloy-primitives             = { version = "0.8.15", default-features = false }
alloy-sol-types              = { version = "0.8.15", default-features = false, features = ["eip712-serde"] }
serde                        = { version = "1.0.219", default-features = false, features = ["alloc", "derive"] }
anyhow                       = { version = "1.0.83", default-features = false }
hex                          = { version = "0.4.3", default-features = false, features = ["alloc"] }
clearing-queue-core.path     = "../core"
