[package]
name        = "eureka-transfer-domain"
version     = "0.1.0"
edition     = "2024"
description = "The Valence co-processor domain definition."

[dependencies]
anyhow                   = { workspace = true }
serde_json               = { workspace = true }
valence-coprocessor      = { workspace = true }
valence-coprocessor-wasm = { workspace = true }
