[package]
name        = "lombard-transfer-controller"
version     = "0.1.0"
edition     = "2024"
description = "The Valence co-processor controller definition."

[dependencies]
anyhow                   = { workspace = true }
serde_json               = { workspace = true }
valence-coprocessor      = { workspace = true }
valence-coprocessor-wasm = { workspace = true }
chrono                   = { version = "0.4.41", default-features = false }
