[package]
name    = "maxbtc_mint_strategist"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow                             = { workspace = true }
maxbtc_mint_types                  = { path = "../types" }
packages                           = { path = "../../../packages" }
dotenv                             = { workspace = true }
cosmwasm-std                       = { workspace = true }
serde                              = { workspace = true }
valence-domain-clients             = { workspace = true }
alloy                              = { workspace = true }
hex                                = { workspace = true }
valence-authorization-utils        = { workspace = true }
valence-processor-utils            = { workspace = true }
valence-library-utils              = { workspace = true }
valence-account-utils              = { workspace = true }
valence-ica-ibc-transfer           = { workspace = true }
valence-clearing-queue-supervaults = { workspace = true }
valence-strategist-utils           = { workspace = true }
valence-maxbtc-issuer              = { workspace = true }
log                                = { workspace = true }
env_logger                         = { workspace = true }
async-trait                        = { workspace = true }
valence-lending-utils              = { workspace = true }
mmvault                            = { workspace = true }
serde_json                         = { workspace = true }
tokio                              = { workspace = true }
